--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@fortawesome/pro-solid-svg-icons": "^6.4.2",
     "@fortawesome/pro-thin-svg-icons": "^6.4.2",
     "@fortawesome/sharp-solid-svg-icons": "^6.4.2",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@types/tailwindcss": "^3.1.0",
     "flowbite": "^1.8.1",
     "rxjs": "~7.8.0",
