--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@types/tailwindcss": "^3.1.0",
     "flowbite": "^1.8.1",
+    "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -42,6 +44,8 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.2",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.29",
+    "@types/node": "^20.11.20",
     "autoprefixer": "^10.4.16",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
