--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@types/tailwindcss": "^3.1.0",
+    "fast-average-color": "^9.4.0",
     "flowbite": "^1.8.1",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
