--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/tailwindcss": "^3.1.0",
     "fast-average-color": "^9.4.0",
     "flowbite": "^1.8.1",
+    "flowbite-datepicker": "^1.2.6",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
