--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "flowbite": "^1.8.1",
     "flowbite-datepicker": "^1.2.6",
     "jquery": "^3.7.1",
+    "libphonenumber-js": "^1.10.58",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
