--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "flowbite-datepicker": "^1.2.6",
     "jquery": "^3.7.1",
     "libphonenumber-js": "^1.10.58",
+    "marked": "^9.1.6",
     "moment": "^2.30.1",
+    "ngx-markdown": "^17.1.1",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
