--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.2",
+    "@angular/cdk": "^17.3.5",
     "@angular/common": "^17.0.2",
     "@angular/compiler": "^17.0.2",
     "@angular/core": "^17.0.2",
@@ -18,6 +19,7 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@fortawesome/angular-fontawesome": "^0.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
@@ -39,10 +41,12 @@
     "libphonenumber-js": "^1.10.58",
     "marked": "^9.1.6",
     "moment": "^2.30.1",
+    "ngx-file-drop": "^16.0.0",
     "ngx-markdown": "^17.1.1",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
@@ -52,6 +56,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.29",
     "@types/node": "^20.11.20",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.16",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
