--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@types/tailwindcss": "^3.1.0",
+    "currencies.json": "^1.0.2",
     "fast-average-color": "^9.4.0",
     "flowbite": "^1.8.1",
     "flowbite-datepicker": "^1.2.6",
