--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "moment": "^2.30.1",
     "ngx-file-drop": "^16.0.0",
     "ngx-markdown": "^17.1.1",
+    "ngx-matomo-client": "^6.2.0",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
