--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.2",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.0",
