--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "flowbite": "^1.8.1",
     "flowbite-datepicker": "^1.2.6",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.10.58",
     "marked": "^9.1.6",
     "moment": "^2.30.1",
@@ -49,8 +50,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
-    "zone.js": "~0.14.2",
-    "jwt-decode": "^4.0.0"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.0",
