--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e": "ng serve & npx cypress open --e2e",
+    "e2e:deploy": "ng serve & npx cypress run --e2e --headless"
   },
   "private": true,
   "dependencies": {
@@ -61,6 +63,7 @@
     "@types/node": "^20.11.20",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.16",
+    "cypress": "^14.0.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
