--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -7,6 +7,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkouts
+        uses: actions/checkout@v4
+
+      - name: Installing dependencies
+        run: npm install
 
       - name: Executing headless cypress testing
         run: npm run e2e:deploy
