--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "e2e": "ng serve & npx cypress open --e2e",
-    "e2e:deploy": "ng serve & npx cypress run --e2e --headless"
+    "e2e": "npx cypress open --e2e",
+    "e2e:deploy": "npx cypress run --e2e --headless"
   },
   "private": true,
   "dependencies": {
