--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkouts
-        uses: actions/checkout@v4
+        uses: cypress-io/github-action@v6
 
       - name: Installing dependencies
         run: npm install
