--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -21,3 +21,5 @@ jobs:
         with:
           build: npm run build
           start: npm start
+          wait-on: 'http://localhost:4200'
+          wait-on-timeout: 120 
