--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -22,4 +22,5 @@ jobs:
           build: npm run build
           start: npm start
           wait-on: 'http://localhost:4200'
-          wait-on-timeout: 120 
+          wait-on-timeout: 120
+          browser: chrome
