--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -26,7 +26,7 @@ jobs:
           browser: chrome
           config: defaultCommandTimeout=10000,pageLoadTimeout=60000
 
-      - name: Subir screenshots como artefacto
+      - name: Uoload screenshots as artifacts
         uses: actions/upload-artifact@v3
         with:
           name: cypress-screenshots
