--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -19,8 +19,14 @@ jobs:
       - name: Executing headless cypress testing
         uses: cypress-io/github-action@v6
         with:
-          start: ng serve
+          start: npm start
           wait-on: 'http://localhost:4200'
           wait-on-timeout: 120
           browser: chrome
           config: defaultCommandTimeout=10000,pageLoadTimeout=60000
+
+    #   - name: Upload screenshots as artifacts
+    #     uses: actions/upload-artifact@v3
+    #     with:
+    #       name: cypress-screenshots
+    #       path: cypress/screenshots
