--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -16,11 +16,12 @@ jobs:
       - name: Installing dependencies
         run: npm install
 
-      - name: Upload build
-        uses: actions/upload-artifact@v3
+      - name: Save build folder
+        uses: actions/upload-artifact@v4
         with:
-          name: dist
-          path: dist/
+          name: build
+          if-no-files-found: error
+          path: build
 
       - name: Executing headless cypress testing
         uses: cypress-io/github-action@v6
