--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -26,6 +26,7 @@ jobs:
             config: defaultCommandTimeout=10000,pageLoadTimeout=60000
             
       - name: Upload build
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: cypress-screenshots
