--- a/.github/workflows/system-testing.yml
+++ b/.github/workflows/system-testing.yml
@@ -88,7 +88,7 @@ jobs:
           echo "  PR URL:    ${{ github.event.pull_request.html_url }}"
           echo ""
 
-          # Trigger E2E tests in DOME-testing repository
+          # Trigger E2E tests in E2E-DOME-BAE repository
           echo "Triggering E2E tests..."
           curl -X POST \
             -H "Authorization: token ${{ secrets.ADMIN }}" \
@@ -107,6 +107,6 @@ jobs:
                 \"pull_request_url\": \"${{ github.event.pull_request.html_url }}\"
               }
             }" \
-            https://api.github.com/repos/sluFicodes/DOME-testing/dispatches
+            https://api.github.com/repos/sluFicodes/E2E-DOME-BAE/dispatches
 
           echo "E2E tests triggered successfully!"
